--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -75,10 +75,7 @@ margin: 40px 10px 20px 90px;
     margin-top: 40px;
     padding-bottom: 40px;
     margin-left: 72%;
-    font-family: var(--jost);
-
-    
-    
+    font-family: var(--jost); 
 }
 .handles{
     display: flex;
@@ -110,11 +107,29 @@ width: 250px;
 .sub button {
     height: 27px;
     width: 80px;
+
     position: relative;
-    left: 150px;
-    bottom: 32px;
+    left: 0px;
+    bottom: 0px;
 }
 .subscribe{
-    padding-left: 20px;
+    padding-right: 10%;
 }
+.socials {
+    gap: 20px;
+    margin-left: 15%;
+    
+}
+hr {
+    text-align: center;
+    width: 60%;
+    margin: 40px 10px 20px 70px;
+}
+.handles {
+    display: flex;
+    gap: 10px;
+
+}
+
+
 }
