--- a/src/styles/Adventures.css
+++ b/src/styles/Adventures.css
@@ -10,12 +10,15 @@
     object-fit: cover;
 }
 .maincard{
+    margin: auto;
     margin-top: 10px;
+    width: 284px;
 }
 .title-icons{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 5px auto;
 }
 .title-icons h5{
     color: var(--primary);
@@ -38,6 +41,7 @@
     font-weight: 400;
     color: #ef4129;
     text-transform: capitalize;
+    padding-left: 10px;
 }
 .notbtn{
     width: 282px;
@@ -46,11 +50,27 @@
     font-family: var(--jost);
     font-weight: 500;
     font-size: 18px;
-    color: var(--primary);
+    color: white;
     cursor: pointer;
     border: none;
     border-radius: 5px;
     display: block;
     margin: auto;
     margin-top: 20px;
+}
+
+@media (min-width: 768px){
+    .adventure-card{
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-between;
+    }
+}
+@media (min-width:1440px){
+    .adventure-card{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-gap: 10px;
+    }
 }
