--- a/src/styles/Adventures.css
+++ b/src/styles/Adventures.css
@@ -14,6 +14,9 @@
     margin-top: 10px;
     width: 284px;
 }
+.maincard .star{
+    color: var(--action);
+}
 .title-icons{
     display: flex;
     justify-content: space-between;
